--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,17 +9,6 @@ import Logo from '../assets/logodark.svg'
              <img src={Logo} alt="Brand logo">
          </a>
      </div>
-     <nav class="one-third column">
-         <ul class="center flex">
-             <li><a href="#features">Features</a></li>
-             <li><a href="#pricing">Pricing</a></li>
-             <li><a href="#customers">Customers</a></li>
-         </ul>
-     </nav>
-     <div class="nav-cta one-third column">
-         <a href="#">Login</a>
-         <a href="#" class="button button-primary">Sign Up</a>
-     </div>
     </div>
  </header>
 
@@ -27,21 +16,21 @@ import Logo from '../assets/logodark.svg'
  <style lang="scss">
 
 .nav{
-    padding: 15px 0;
+    padding: 5px 0;
     li{
       list-style: none;
-      margin-top: 7px;
+      margin-top: 2px;
     }
     .nav-cta{
       text-align: right;
     }
     a:not(.button):not(.logo-link){
-      color: #111;
-      padding: 0 20px;
+      color: #a82222;
+      padding: 0 50px;
       text-decoration: none;
     }
     .logo-link img{
-      width: 90px;
+      width: 200px;
       margin-top: 5px;
     }
     @media (max-width:700px) {
