--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro'
 import Brief from '../components/Brief.astro'
-import Pricing from '../components/Pricing.astro';
-import Customers from '../components/Customers.astro'
+import Email from '../components/Email.astro';
 import Footer from '../components/Footer.astro';
 ---
 
@@ -12,8 +11,7 @@ import Footer from '../components/Footer.astro';
 	<Header />
 	<Hero />
 	<Brief />
-	<Pricing />
-	<Customers />
+	<Email />
 	<Footer />
 </Layout>
 
