finish landing and add traslation

--- a/src/componentsEn/Hero.astro
+++ b/src/componentsEn/Hero.astro
@@ -5,10 +5,10 @@
         <div class="hero-copy">
           <h1 class="h1-title">AxlePro-Polska</h1>
           <p>
-            Twoim zaufanym dostawcy osi i zawieszeń do ciężarówek! Naszym celem
-            jest zapewnienie najwyższej jakości rozwiązań dla transportu
-            ciężarowego. Oferujemy niezawodne części, które zwiększają
-            bezpieczeństwo i wydajność Twojej floty.
+            Your trusted supplier of truck axles and suspensions! Our goal is to
+            provide the highest quality solutions for trucking trucking. We
+            offer reliable parts that increase safety and efficiency of your
+            fleet.
           </p>
         </div>
       </div>
