--- a/src/componentsEn/Header.astro
+++ b/src/componentsEn/Header.astro
@@ -9,9 +9,8 @@ import Logo from "../assets/logodark.svg";
     </a>
 
     <div class="nav__links">
-      <a href="https://axlepro-polska.com/pl" class="nav__link">Strona główna</a
-      >
-      <a href="pl/AboutUs" class="nav__link">Kim jesteśmy</a>
+      <a href="https://axlepro-polska.com/en" class="nav__link">Home</a>
+      <a href="en/AboutUs" class="nav__link">About Us</a>
       <!-- Selector de idiomas -->
       <div class="language-switcher">
         <button class="language-current">PL</button>
@@ -20,7 +19,7 @@ import Logo from "../assets/logodark.svg";
           <a href="/pl" class="language-option active">PL</a>
         </div>
       </div>
-      <a href="#Email" class="nav__cta">Kontakt</a>
+      <a href="#Email" class="nav__cta">Contactanos</a>
     </div>
   </div>
 </header>
