--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,17 +6,23 @@ export interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description">
+    <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <meta name="description" content="Idol is an elegant landing page template for micro SaaS products built with AstroJS & Skeleton CSS"/>
+    <meta
+      name="description"
+      content="Idol is an elegant landing page template for micro SaaS products built with AstroJS & Skeleton CSS"
+    />
     <title>{title}</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+    />
   </head>
   <body>
     <slot />
@@ -24,16 +30,17 @@ const { title } = Astro.props;
 </html>
 
 <style lang="scss" is:global>
-  @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap');
+  @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap");
 
   :root {
     --accent: #cc4b06;
     --dark: #000;
     --tenary: #ecf7f8;
-    --base-font: 'Manrope', sans-serif;
+    --base-font: "Manrope", sans-serif;
   }
 
-  html, body {
+  html,
+  body {
     font-family: var(--base-font);
     margin: 0px;
     scroll-behavior: smooth;
@@ -56,7 +63,10 @@ const { title } = Astro.props;
     margin: 50px auto;
   }
 
-  .h1-title, .h2-title, .s-subtitle, .l-subtitle {
+  .h1-title,
+  .h2-title,
+  .s-subtitle,
+  .l-subtitle {
     font-weight: 700;
   }
 
@@ -94,12 +104,14 @@ const { title } = Astro.props;
 
   .button {
     border-radius: 8px;
-    &.button-primary, &.button-primary:hover, &.button-primary:focus {
+    &.button-primary,
+    &.button-primary:hover,
+    &.button-primary:focus {
       background: var(--accent);
       border: var(--accent);
     }
     &:hover {
-      opacity: .8;
+      opacity: 0.8;
     }
   }
 
