--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,8 @@ import Logo from "../assets/logodark.svg";
     </a>
 
     <div class="nav__links">
-      <a href="https://axlepro-polska.com/pl" class="nav__link">Strona główna</a
-      >
-      <a href="pl/AboutUs" class="nav__link">Kim jesteśmy</a>
+      <a href="https://axlepro-polska.com" class="nav__link">Strona główna</a>
+      <a href="AboutUs" class="nav__link">Kim jesteśmy</a>
       <!-- Selector de idiomas -->
       <div class="language-switcher">
         <button class="language-current">PL</button>
