--- a/src/componentsEn/AboutUs.astro
+++ b/src/componentsEn/AboutUs.astro
@@ -1,5 +1,5 @@
 ---
-
+import eq from "../assets/eq.jpg";
 ---
 
 <section class="about-us">
@@ -28,7 +28,7 @@
     </div>
     <div class="image-container">
       <img
-        src="/src/assets/equipo.jpg"
+        src={eq}
         alt="System zawieszenia ciężarówki"
         class="about-image"
         width="600"
