--- a/src/componentsEn/Header.astro
+++ b/src/componentsEn/Header.astro
@@ -4,13 +4,13 @@ import Logo from "../assets/logodark.svg";
 
 <header class="nav">
   <div class="nav__container">
-    <a href="https://axlepro-polska.com" class="nav__logo">
+    <a href="https://axlepro-polska.com/en" class="nav__logo">
       <img src={Logo} alt="AxlePro-Polska logo" />
     </a>
 
     <div class="nav__links">
       <a href="https://axlepro-polska.com/en" class="nav__link">Home</a>
-      <a href="en/AboutUs" class="nav__link">About Us</a>
+      <a href="AboutUs" class="nav__link">About Us</a>
       <!-- Selector de idiomas -->
       <div class="language-switcher">
         <button class="language-current">PL</button>
