--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,9 @@
     <div class="footer-link flex js one-half column">
       <p>Dane kontaktowe:</p>
       <div class="emails">
-        <a href="mailto:informacja@axlepro.com">informacja@axlepro.com</a>
+        <a href="mailto:informacja@axlepro-polska.com"
+          >informacja@axlepro-polska.com</a
+        >
       </div>
     </div>
     <div class="footer-note flex js one-half column">
