--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,19 +4,19 @@ import Logo from "../assets/logodark.svg";
 
 <header class="nav">
   <div class="nav__container">
-    <a href="https://axlepro-polska.com" class="nav__logo">
+    <a href="/" class="nav__logo">
       <img src={Logo} alt="AxlePro-Polska logo" />
     </a>
 
     <div class="nav__links">
-      <a href="https://axlepro-polska.com" class="nav__link">Strona główna</a>
+      <a href="/" class="nav__link">Strona główna</a>
       <a href="AboutUs" class="nav__link">Kim jesteśmy</a>
       <!-- Selector de idiomas -->
       <div class="language-switcher">
         <button class="language-current">PL</button>
         <div class="language-options">
           <a href="/en" class="language-option">EN</a>
-          <a href="/pl" class="language-option active">PL</a>
+          <a href="/" class="language-option active">PL</a>
         </div>
       </div>
       <a href="#Email" class="nav__cta">Kontakt</a>
