--- a/src/componentsEn/Header.astro
+++ b/src/componentsEn/Header.astro
@@ -4,22 +4,22 @@ import Logo from "../assets/logodark.svg";
 
 <header class="nav">
   <div class="nav__container">
-    <a href="https://axlepro-polska.com/en" class="nav__logo">
+    <a href="/en" class="nav__logo">
       <img src={Logo} alt="AxlePro-Polska logo" />
     </a>
 
     <div class="nav__links">
-      <a href="https://axlepro-polska.com/en" class="nav__link">Home</a>
+      <a href="/en" class="nav__link">Home</a>
       <a href="AboutUs" class="nav__link">About Us</a>
       <!-- Selector de idiomas -->
       <div class="language-switcher">
-        <button class="language-current">PL</button>
+        <button class="language-current">EN</button>
         <div class="language-options">
           <a href="/en" class="language-option">EN</a>
-          <a href="/pl" class="language-option active">PL</a>
+          <a href="/" class="language-option active">PL</a>
         </div>
       </div>
-      <a href="#Email" class="nav__cta">Contactanos</a>
+      <a href="#Email" class="nav__cta">Contact Us</a>
     </div>
   </div>
 </header>
