--- a/src/componentsEn/AboutUs.astro
+++ b/src/componentsEn/AboutUs.astro
@@ -13,16 +13,15 @@ import eq from "../assets/eq.png";
         reliable partner in the logistics industry.
       </p>
       <p class="description">
-        Nasza specjalizacja obejmuje kompleksowy asortyment części zamiennych
-        oraz systemy zawieszeń dostosowane do wymagań współczesnych ciężarówek.
-        Współpracujemy z wiodącymi europejskimi producentami, gwarantując
-        produkty spełniające najwyższe standardy bezpieczeństwa i wydajności.
-      </p>
-      <p class="description">
         Our specialties include a comprehensive range of spare parts and
         suspension systems tailored to the requirements of modern trucks. We
         work with leading European manufacturers, guaranteeing products that
         meet the highest safety and performance standards.
+      </p>
+      <p class="description">
+        At AxlePro-Polska, we combine technological innovation with more than a
+        decade of of experience, offering our customers technical support and
+        advice at every stage of cooperation.
       </p>
       <a href="#Email" class="cta-button">Contact us</a>
     </div>
