--- a/src/componentsEn/Header.astro
+++ b/src/componentsEn/Header.astro
@@ -10,7 +10,7 @@ import Logo from "../assets/logodark.svg";
 
     <div class="nav__links">
       <a href="/en" class="nav__link">Home</a>
-      <a href="AboutUs" class="nav__link">About Us</a>
+      <a href="/en/AboutUs" class="nav__link">About Us</a>
       <!-- Selector de idiomas -->
       <div class="language-switcher">
         <button class="language-current">EN</button>
